<resources>
    <string name="app_name">App7_ListaContatos</string>
    <string name="login">Usuario</string>
    <string name="senha">Senha</string>
    <string name="confirmaSenha">Confirmar Senha</string>
    <string name="logar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="criarConta">Criar Conta</string>
    <string name="apelido">Apelido</string>
    <string name="nome">Nome</string>
    <string name="telefone">Numero de telefone</string>

</resources>