<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".view.Activity_Cadastrar">

  <Button
      android:id="@+id/cadastrarUsuario"
      android:layout_width="wrap_content"
      android:layout_marginTop="50dp"
      android:layout_height="wrap_content"
      android:text="@string/criarConta"
      android:textAlignment="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editConfirmaSenhaCadastrar" />

  <EditText
      android:id="@+id/editUsuarioCadastrar"
      android:layout_marginTop="50dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/login"
      android:inputType="textPersonName"
      android:textAlignment="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      tools:layout_editor_absoluteY="95dp" />

  <EditText
      android:id="@+id/editSenhaCadastrar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="50dp"
      android:ems="10"
      android:hint="@string/senha"
      android:inputType="textPassword"
      android:textAlignment="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editUsuarioCadastrar" />

  <EditText
      android:id="@+id/editConfirmaSenhaCadastrar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:ems="10"
      android:hint="@string/confirmaSenha"
      android:inputType="textPassword"
      android:textAlignment="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editSenhaCadastrar" />
</androidx.constraintlayout.widget.ConstraintLayout>